--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -49,6 +49,7 @@
       <!-- Scripts -->
   		{% include scripts-main.html %}
 			{% include tracking.html %}
+			<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
 	</body>
 </html>
