--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,3 +20,13 @@
 <script src="{{ "/assets/highlight/highlight.pack.js" | absolute_url }}"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 <noscript><link rel="stylesheet" href="{{ "/assets/css/noscript.css" | absolute_url }}" /></noscript>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112753112-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-112753112-1');
+</script>
