--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 body {
+  background-color: #071630;
+  color: white;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +12,75 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+pre {
+  font-family: 'Source Code Pro', monospace;
+  margin: 0px;
+  text-align: left;
+}
+
+.navbar {
+  display: flex;
+  flex-direction: column;
+  font-size: 20px;
+}
+
+.navbar-caret {
+  animation: blink 1s infinite;
+  /* background-color: #f569ff; */
+  display: inline-block;
+}
+
+.navbar-input-wrapper {
+  align-items: center;
+  background-color: rgba(0,0,0,0);
+  display: flex;
+  outline: 0;
+  padding: 12px 12px 4px 12px;
+}
+
+.navbar-input-wrapper > div > pre::selection {
+  background: rgba(0,0,0,0);
+}
+.navbar-input-wrapper > div > pre::-moz-selection {
+  background: rgba(0,0,0,0);
+}
+
+.navbar-input {
+  border: none;
+  color: white;
+  caret-color: rgba(0,0,0,0);
+  outline: 0;
+  font-family: 'Source Code Pro', monospace;
+  font-size: 20px;
+}
+
+.navbar-error-message {
+  color: silver;
+  padding-left: 12px;
+}
+
+.navbar-path {
+  color: #cc0096;
+  font-weight: bold;
+}
+
+.navbar-suggestions-wrapper {
+  display: flex;
+  padding: 2px 8px 8px 8px;
+}
+
+.navbar-suggestion {
+  border-radius: 5px;
+  color: #cc0096;
+  font-weight: bold;
+  margin: 2px;
+  min-width: 50px;
+  padding: 4px;
+}
+
+.navbar-suggestion:hover {
+  background-color: rgba(245, 105, 255, 0.2);
+  cursor: pointer;
 }
