--- a/src/index.css
+++ b/src/index.css
@@ -2,28 +2,52 @@ body {
   background-color: #071630;
   color: white;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 1.2rem;
+  font-family: 'Source Code Pro', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family:'Source Code Pro', monospace;
 }
 
 pre {
   font-family: 'Source Code Pro', monospace;
   margin: 0px;
-  text-align: left;
+}
+
+h1 {
+  border-radius: 5px;
+  color: #cc0096;
+  font-weight: bold;
+  font-size: 2rem;
+  padding: 0.5rem;
+  text-align: center;
+}
+
+h1:hover {
+  cursor: pointer;
+  background-color: rgba(245, 105, 255, 0.2);
+}
+
+p {
+  font-size: 1.1rem;
+}
+
+.container {
+  width: 35rem;
+  margin: auto;
+}
+
+.post-wrapper {
+  margin-bottom: 4rem;
 }
 
 .navbar {
   display: flex;
   flex-direction: column;
-  font-size: 20px;
+  font-size: 1.5rem;
 }
 
 .navbar-caret {
@@ -37,7 +61,6 @@ pre {
   background-color: rgba(0,0,0,0);
   display: flex;
   outline: 0;
-  padding: 12px 12px 4px 12px;
 }
 
 .navbar-input {
@@ -49,7 +72,7 @@ pre {
   padding: 0px;
   margin: 0px;
   font-family: 'Source Code Pro', monospace;
-  font-size: 20px;
+  font-size: 1.5rem;
 }
 
 .navbar-error-message {
@@ -69,7 +92,7 @@ pre {
 
 .navbar-links-wrapper {
   display: flex;
-  padding: 2px 8px 8px 8px;
+  margin-top: 2px;
 }
 
 .navbar-link {
